--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,12 @@
-<p>{{personagem.name}}</p>
-<p>Altura: {{personagem.height}}cm</p>
+<div class="container">
+    <div class="row mt-3">
+        
+        <div class="col-4" *ngFor="let personagem of personagens">
+            <div class="card">
+                <div class="card-body">
+                    <h5 class="card-title">{{personagem.name}}</h5>
+                </div>
+            </div>
+        </div>
 
-<button class="btn btn-primary">XPTO</button>
+</div>
