--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,20 @@
 <div class="container">
-    <div class="row mt-3">
-        
-        <div class="col-4" *ngFor="let personagem of personagens">
+    <div class="row">    
+        <div class="col-4 mt-3" *ngFor="let personagem of personagens">
             <div class="card">
                 <div class="card-body">
                     <h5 class="card-title">{{personagem.name}}</h5>
                 </div>
             </div>
         </div>
+    </div>
 
+    <div class="row">    
+        <div class="col-6 mt-3">
+            <button class="btn btn-primary" (click)="retroceder()">Voltar</button>
+        </div>
+        <div class="col-6 mt-3">
+            <button class="btn btn-primary" (click)="avancar()">Avançar</button>
+        </div>
+    </div>
 </div>
